--- a/backend/.env.example
+++ b/backend/.env.example
@@ -41,14 +41,17 @@ GEMINI_TIMEOUT_SECONDS=30
 GEMINI_MAX_RETRIES=3
 
 # CORS
-CORS_ORIGINS=["http://localhost:3000"]
+# Can be a comma-separated list: https://example.com,https://app.example.com
+# Or leave empty to use default: http://localhost:3000
+CORS_ORIGINS=http://localhost:3000
 
 # Rate Limiting
 RATE_LIMIT_PER_MINUTE=100
 
 # File Upload
 MAX_UPLOAD_SIZE=10485760  # 10MB in bytes
-ALLOWED_UPLOAD_EXTENSIONS=[".dcm", ".nii", ".nii.gz", ".jpg", ".png"]
+# Can be a comma-separated list: .dcm,.nii,.nii.gz,.jpg,.png
+ALLOWED_UPLOAD_EXTENSIONS=.dcm,.nii,.nii.gz,.jpg,.png
 
 # ML Model Settings
 ML_MODEL_PATH=models/
